--- a/web/index.html
+++ b/web/index.html
@@ -10,10 +10,50 @@
         box-sizing: border-box;
         touch-action: manipulation;
       }
+      button {
+        padding: 2px 10px;
+        border: 1px solid #93989c;
+        border-radius: 5px;
+        background-color: #f5f6f7;
+        cursor: pointer;
+      }
+      hr {
+        background-color: #93989c;
+        border: none;
+        display: block;
+        height: 1px;
+        margin: 1.5rem 0;
+      }
       body {
         margin: 0;
       }
-      main {
+      footer {
+        font-family: Menlo, Monaco, Consolas, Andale Mono, lucida console, Courier New, monospace;
+        color: #7a7a7a;
+        text-align: center;
+      }
+      header {
+        height: 80px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      header .tile {
+        width: 40px;
+        border: 1px solid;
+        transform: perspective(1000px) rotateX(4deg) rotateY(16deg) rotateZ(-7deg);
+        box-shadow: 24px 16px 64px 0 rgba(0, 0, 0, 0.08);
+        box-shadow: rgba(22, 31, 39, 0.42) 0px 60px 123px -25px, rgba(19, 26, 32, 0.08) 0px 35px 75px -35px;
+        border-color: rgb(213, 220, 226) rgb(213, 220, 226) rgb(184, 194, 204);
+      }
+      header .logo {
+        text-align: center;
+        font-size: 2em;
+        margin: 0 50px 0 10px;
+      }
+      header,
+      main,
+      footer {
         max-width: 900px;
         margin: 0 auto;
         padding: 10px;
@@ -96,6 +136,12 @@
     </style>
   </head>
   <body>
+    <header x-data>
+      <div class="tile">
+        <img draggable="false" :src="`images/${$store.allTiles[getRandomInt(0, 34)]}.svg`" alt="" />
+      </div>
+      <span class="logo">听牌助手</span>
+    </header>
     <main>
       <div class="select-area">
         <div x-data class="all-tiles">
@@ -116,7 +162,7 @@
           <button @click="$store.handTiles.clear()">清空</button>
         </div>
         <div class="hand" x-data>
-          <div x-show="$store.handTiles.tilesWall.length === 0" class="tile" style="opacity: 0">
+          <div x-show="$store.handTiles.tilesWall.length === 0" class="tile" style="opacity: 0; margin: 2.5px">
             <img draggable="false" :src="`images/白.svg`" alt="" />
           </div>
           <template x-for="(tile, index) in $store.handTiles.tilesWall" :key="index">
@@ -126,7 +172,7 @@
           </template>
         </div>
       </div>
-      <template x-data x-if="$store.handTiles.tilesCount === 14">
+      <template x-data x-if="($store.handTiles.tilesCount - 2) % 3 === 0">
         <div>
           <div x-show="$store.handTiles.checkWin">
             <div style="margin: 5px 0">胡牌</div>
@@ -158,7 +204,7 @@
           </div>
         </div>
       </template>
-      <template x-data x-if="$store.handTiles.tilesCount === 13">
+      <template x-data x-if="($store.handTiles.tilesCount - 1) % 3 === 0">
         <div>
           <div x-show="$store.handTiles.winTile.length > 0" style="margin: 5px 0">查听张</div>
           <div x-show="!$store.handTiles.winTile.length > 0" style="margin: 5px 0">没有听牌</div>
@@ -187,8 +233,17 @@
         </div>
       </template>
     </main>
+    <footer>
+      <hr />
+      <p>Made by Yachen with ❤️. © 2022-2024.</p>
+    </footer>
     <script src="mahjong.js"></script>
     <script>
+      function getRandomInt(min, max) {
+        min = Math.ceil(min);
+        max = Math.floor(max);
+        return Math.floor(Math.random() * (max - min) + min);
+      }
       document.addEventListener('alpine:init', () => {
         Alpine.store('allTiles', TILES_TEXT.flat());
         Alpine.store('handTiles', {
