--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🀄</text></svg>"
+    />
     <title>听牌助手</title>
     <style>
       * {
@@ -16,6 +20,7 @@
         border-radius: 5px;
         background-color: #f5f6f7;
         cursor: pointer;
+        color: #000000;
       }
       hr {
         background-color: #93989c;
@@ -49,7 +54,7 @@
       header .logo {
         text-align: center;
         font-size: 2em;
-        margin: 0 50px 0 10px;
+        margin: 0 10px;
       }
       header,
       main,
